# fastapi-poll-service

./: .gitignore  Hierarchical Task List.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
poll-service-app/: .env_template  main.py
poll-service-app/alembic/: env.py
poll-service-app/alembic/versions/: 2024_10_01_1444-acf85cefa422_create_polls_and_options_tables.py  2024_10_21_1527-873937098193_create_votes_table.py
poll-service-app/api/: __init__.py  crud.py  test_views.py  views.py
poll-service-app/core/: config.py
poll-service-app/core/models/: __init__.py  db_helper.py  option.py  poll.py  vote.py
poll-service-app/core/schemas/: option.py  poll.py  poll_result.py  vote.py
