[tool.poetry]
name = "poll-service"
version = "0.1.0"
description = ""
authors = ["kpavlov <k.pavlov.reg@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.31.0"}
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
